# topohedral-linalg

./: .gitignore  Cargo.toml  DEPLOYMENT.md  PLAN.md  README.md  activate.zsh  bench-results.txt  bench-results2.txt  build-docs.sh  build.rs  changelog.md  rustfmt.toml  versions.json
.cargo/: config.toml
.github/workflows/: ci.yaml  docs.yaml
assets/: decomp-data.py  matmul-data.json  matmul-data.py
benches/: dmatrix_addop.rs  elementwise.rs  smatrix_addop.rs
devdocs/gpu-support/: README.md  elementwise-add.md  expression-lowering.md  roadmap.md
docs/: dmatrix-vectorisation.md
docs/website/: mkdocs.yml
examples/: arithmetic.rs
src/: common.rs  float.rs  lib.rs  subviews.rs
src/blaslapack/: common.rs  gees.rs  geev.rs  gemm.rs  gemv.rs  geqrf.rs  gesv.rs  getrf.rs  mod.rs  orgqr.rs  orqr.rs  potrf.rs  syev.rs
src/dmatrix/: addop.rs  construction.rs  divop.rs  eig.rs  indexing.rs  io.rs  iteration.rs  lu.rs  matmul.rs  matrix_ops.rs  mod.rs  mulop.rs  negop.rs  objects.rs  qr.rs  reduce_ops.rs  schur.rs  solve.rs  sorting.rs  subop.rs  subviews.rs  symeig.rs  transform_ops.rs
src/dvector/: mod.rs
src/expr/: mod.rs
src/expression/: binary_expr.rs  boolean_expr.rs  comparison_expr.rs  mod.rs  outer_product_expr.rs  unary_expr.rs
src/matrix/: addop.rs  binop.rs  common.rs  core.rs  divop.rs  dmatrix.rs  dvector.rs  mod.rs  mulop.rs  smatrix.rs  subop.rs  svector.rs
src/ops/: eig.rs  lu.rs  matmul.rs  mod.rs  qr.rs  schur.rs  solve.rs  symeig.rs
src/scvector/: mod.rs
src/smatrix/: addop.rs  construction.rs  divop.rs  eig.rs  indexing.rs  io.rs  iteration.rs  lu.rs  matmul.rs  matrix_ops.rs  mod.rs  mulop.rs  negop.rs  objects.rs  qr.rs  reduce_ops.rs  schur.rs  solve.rs  sorting.rs  subop.rs  subviews.rs  symeig.rs  transform_ops.rs
src/srvector/: mod.rs
src/subviews/: mod.rs
src/vector/: common.rs  dvector.rs  mod.rs  scvector.rs  srvector.rs  svector.rs
tests/: boolean_indexing.rs  decomp.rs  elementwise.rs  float_trait.rs  matrix_creation.rs  matrix_ops.rs  misc.rs  reduce_ops.rs  sorting.rs  subviews.rs  transform_ops.rs  vector_ops.rs
v3.0.0/: 404.html  index.html  sitemap.xml
v3.0.0/api/: help.html  index.html  settings.html  src-files.js
v3.0.0/developers/: index.html
v3.0.0/getting-started/: index.html
v3.0.0/javascripts/: katex.js
v3.0.0/search/: search_index.json
v3.0.0/user-guide/: index.html
v3.1.0/: 404.html  index.html  sitemap.xml
v3.1.0/api/: help.html  settings.html  src-files.js
v3.1.0/developers/: index.html
v3.1.0/getting-started/: index.html
v3.1.0/search/: search_index.json
v3.1.0/user-guide/: index.html
v4.0.0/: 404.html  index.html  sitemap.xml
v4.0.0/api/: help.html  settings.html
v4.0.0/developers/: index.html
v4.0.0/getting-started/: index.html
v4.0.0/search/: search_index.json
v4.0.0/user-guide/: index.html
v4.1.0/: 404.html  index.html  sitemap.xml
v4.1.0/api/: crates.js  src-files.js
(+1176 files in other folders)
