[package]
name = "topohedral-linalg"
version = "0.0.0"
authors = ["John Ferguson <JAFerguson952@gmail.com>"]
edition = "2021"
repository = "https://github.com/TopoHedralLabs/topohedral-linalg"
readme = "README.md"
license = "MIT"
description = "A library for tracing the execution of Rust programs. Provides both a compile-time switch and a runtime switch for tracing."
publish = ["cloudsmith"]


[features]
enable_trace = ["topohedral-tracing/enable_trace"]

[dependencies]
log = "0.4.21"
rand = "0.8.5"
topohedral-tracing = { version = "0.0.1", registry = "cloudsmith"}
cblas = "0.5.0"
lapack = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.4"
num-complex = "0.4.6"

[dev-dependencies]
criterion = "0.5.1"
ctor = "0.2.8"
nalgebra = {version = "0.33.2", features = ["rand"]}
approx = "0.5.1"

[[bench]]
name = "dmatrix_addop"
harness = false

[[bench]]
name = "smatrix_addop"
harness = false
